@@ -218,12 +218,14 @@
     },
     "buy_themes": {
       "title": "🎊 | Buy Themes",
+      "activate": "Use theme",
+      "activated": "Your theme was equiped! You are so perfect now >..<",
       "data": "_{{description}}_\n**Price**: {{price}} :star:\n**Author**: <@{{author}}>",
       "description": "Below are some themes you can buy right away.",
       "owned": "(Owned)",
       "not-registered": "This theme is not yet available! Please try again later",
       "preview-mode": "Preview Mode",
-      "success": "**Purchase successfully made!** You can now enable it on {{command}}",
+      "success": "**Purchase successfully made!** You can now enable it on {{command}} or pressing the button",
       "poor": "You don't have all these stars to buy this!",
       "true": "✅",
       "false": "❌",
